[package]
name = "anolog"
version = "0.1.5"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/anolog"
description = "anonymize access log files"
edition = "2018"
keywords = ["anonymize", "random", "log"]
license = "MIT"
categories = []

[dependencies]
fnv = "1.0.7"
lazy-regex = "1.1"
rand = "0.8"
regex = "1.4"

# [patch.crates-io]
# lazy-regex = { path = "../lazy-regex" }
